Sun May 22 12:14:06 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): use original rb_scan_args
	  when fmt is dynamic.

Sun May 22 11:41:12 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* class.c (rb_scan_args): moved to bottom of the file to make the
	  effect of `#undef rb_scan_args` the minimum.

	* include/ruby/ruby.h (rb_scan_args): overwrite only if GCC and
	  optimized. Visual C++ 14 or later can compile it but make it
	  conservative.

Sat May 21 22:45:50 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): don't use ALWAYS_INLINE with
	  `inline`.  if gcc needs this duplication, do in ALWAYS_INLINE macro.

Sat May 21 21:11:56 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): use __VA_ARGS__ instead of
	  va_arg to allow compilers optimize more aggressive.
	  https://gustedt.wordpress.com/2011/07/10/avoid-writing-va_arg-functions/
	  rb_scan_args is now expected to be statically resolved.

Sun May 22 02:41:52 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c: remove hacky macro introduced at r30437.

	* ext/zlib/zlib.c (gzfile_make_header): cast as long (instead of int).

	* ext/zlib/zlib.c (gzfile_make_footer): ditto.

Sat May 21 21:07:18 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (ALWAYS_INLINE): force compilers the function inlined.

Sat May 21 16:16:03 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ssl.c (ossl_ssl_stop): Don't free the SSL struct
	  here. Since some methods such as SSLSocket#connect releases GVL,
	  there is a chance of use after free if we free the SSL from another
	  thread. SSLSocket#stop was documented as "prepares it for another
	  connection" so this is a slightly incompatible change. However when
	  this sentence was added (r30090, Add toplevel documentation for
	  OpenSSL, 2010-12-06), it didn't actually. The current behavior is
	  from r40304 (Correct shutdown behavior w.r.t GC., 2013-04-15).